src/test/06-Errors/error-op-overload-child-2.txt
error-op-overload-child-2.ck:3:20: error: binary operator '=>' already overloaded on types 'SinOsc' and 'NRev' (or their parents)...
[3] fun void @operator =>( SinOsc lhs, NRev rhs )
                       ^
